[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nxt_remote_py"
version = "0.0.1"
license = "MIT"
description="NXTc remote control binding library (with pybind11)"
requires-python = ">=3.9"

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.cibuildwheel]
build-frontend = "build[uv]"
enable = ["pypy"]
