<?xml version="1.0"?>
<package format="2">
  <name>nxt_motor_driver</name>
  <version>0.0.1</version>
  <description>Motor driver package for controlling NXT2 motors in ROS 2.</description>
  <maintainer email="schnaggelz@gmx.de">Schnaggelz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>example_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
</package>
