<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nxt_test_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="schnaggelz@gmx.de">schnaggelz</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nxt_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
